Compilers/ao/syntax.output
Terminals unused in grammar

   OINT
   HINT


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | VarDec COMMA error

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB DINT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error DefList StmtList RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt

   35 DefList: Def DefList
   36        | %empty

   37 Def: Specifier DecList SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp DOT ID
   57    | ID
   58    | DINT
   59    | FLOAT

   60 Args: Exp COMMA Args
   61     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 10 26
LOWER_THAN_ELSE (258)
ELSE (259) 33
TYPE (260) 11
STRUCT (261) 13 14
IF (262) 32 33
WHILE (263) 34
RETURN (264) 31
ID (265) 15 17 18 20 21 53 54 56 57
DINT (266) 19 58
OINT (267)
HINT (268)
FLOAT (269) 59
SEMI (270) 4 5 29 31 37
COMMA (271) 9 10 22 39 60
ASSIGNOP (272) 41 42
RELOP (273) 45
PLUS (274) 46
MINUS (275) 47 51
STAR (276) 48
DIV (277) 49
AND (278) 43
OR (279) 44
DOT (280) 56
NOT (281) 52
LP (282) 20 21 32 33 34 50 53 54
RP (283) 20 21 32 33 34 50 53 54
LB (284) 19 55
RB (285) 19 55
LC (286) 13 25
RC (287) 13 25 26


Nonterminals, with rules where they appear

$accept (33)
    左： 0
Program (34)
    左： 1, 右： 0
ExtDefList (35)
    左： 2 3, 右： 1 2
ExtDef (36)
    左： 4 5 6 7, 右： 2
ExtDecList (37)
    左： 8 9 10, 右： 4 9
Specifier (38)
    左： 11 12, 右： 4 5 6 24 37
StructSpecifier (39)
    左： 13 14, 右： 12
OptTag (40)
    左： 15 16, 右： 13
Tag (41)
    左： 17, 右： 14
VarDec (42)
    左： 18 19, 右： 8 9 10 19 24 40 41
FunDec (43)
    左： 20 21, 右： 6 7
VarList (44)
    左： 22 23, 右： 20 22
ParamDec (45)
    左： 24, 右： 22 23
CompSt (46)
    左： 25 26, 右： 6 7 30
StmtList (47)
    左： 27 28, 右： 25 26 27
Stmt (48)
    左： 29 30 31 32 33 34, 右： 27 32 33 34
DefList (49)
    左： 35 36, 右： 13 25 26 35
Def (50)
    左： 37, 右： 35
DecList (51)
    左： 38 39, 右： 37 39
Dec (52)
    左： 40 41, 右： 38 39
Exp (53)
    左： 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59, 右：
    29 31 32 33 34 41 42 43 44 45 46 47 48 49 50 51 52 55 56 60 61
Args (54)
    左： 60 61, 右： 53 60


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    7 ExtDef: error . FunDec CompSt

    ID  shift, and go to state 9

    FunDec  转到状态 10


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 11

    $default  reduce using rule 16 (OptTag)

    OptTag  转到状态 12
    Tag     转到状态 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 15
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 16
    SEMI  shift, and go to state 17

    ExtDecList  转到状态 18
    VarDec      转到状态 19
    FunDec      转到状态 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 21


State 10

    7 ExtDef: error FunDec . CompSt

    error  shift, and go to state 22
    LC     shift, and go to state 23

    CompSt  转到状态 24


State 11

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 12

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 25


State 13

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  接受


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   10           | VarDec . COMMA error
   19 VarDec: VarDec . LB DINT RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 22
    LC     shift, and go to state 23

    CompSt  转到状态 29


State 21

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 30

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    VarList          转到状态 32
    ParamDec         转到状态 33


State 22

   26 CompSt: error . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        转到状态 34
    StructSpecifier  转到状态 8
    DefList          转到状态 35
    Def              转到状态 36


State 23

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        转到状态 34
    StructSpecifier  转到状态 8
    DefList          转到状态 37
    Def              转到状态 36


State 24

    7 ExtDef: error FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 25

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        转到状态 34
    StructSpecifier  转到状态 8
    DefList          转到状态 38
    Def              转到状态 36


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

    9 ExtDecList: VarDec COMMA . ExtDecList
   10           | VarDec COMMA . error

    error  shift, and go to state 39
    ID     shift, and go to state 40

    ExtDecList  转到状态 41
    VarDec      转到状态 19


State 28

   19 VarDec: VarDec LB . DINT RB

    DINT  shift, and go to state 42


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 31

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  转到状态 43


State 32

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 33

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 23 (VarList)


State 34

   37 Def: Specifier . DecList SEMI

    ID  shift, and go to state 40

    VarDec   转到状态 46
    DecList  转到状态 47
    Dec      转到状态 48


State 35

   26 CompSt: error DefList . StmtList RC

    error   shift, and go to state 22
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    RETURN  shift, and go to state 51
    ID      shift, and go to state 52
    DINT    shift, and go to state 53
    FLOAT   shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 23

    RC  reduce using rule 28 (StmtList)

    CompSt    转到状态 58
    StmtList  转到状态 59
    Stmt      转到状态 60
    Exp       转到状态 61


State 36

   35 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        转到状态 34
    StructSpecifier  转到状态 8
    DefList          转到状态 62
    Def              转到状态 36


State 37

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 22
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    RETURN  shift, and go to state 51
    ID      shift, and go to state 52
    DINT    shift, and go to state 53
    FLOAT   shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 23

    RC  reduce using rule 28 (StmtList)

    CompSt    转到状态 58
    StmtList  转到状态 63
    Stmt      转到状态 60
    Exp       转到状态 61


State 38

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 64


State 39

   10 ExtDecList: VarDec COMMA error .

    $default  reduce using rule 10 (ExtDecList)


State 40

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 41

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 42

   19 VarDec: VarDec LB DINT . RB

    RB  shift, and go to state 65


State 43

   19 VarDec: VarDec . LB DINT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 24 (ParamDec)


State 44

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 45

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    VarList          转到状态 66
    ParamDec         转到状态 33


State 46

   19 VarDec: VarDec . LB DINT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 28

    $default  reduce using rule 40 (Dec)


State 47

   37 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


State 48

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 38 (DecList)


State 49

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 70


State 50

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 71


State 51

   31 Stmt: RETURN . Exp SEMI

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 72


State 52

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   57    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 57 (Exp)


State 53

   58 Exp: DINT .

    $default  reduce using rule 58 (Exp)


State 54

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


State 55

   51 Exp: MINUS . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 74


State 56

   52 Exp: NOT . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 75


State 57

   50 Exp: LP . Exp RP

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 76


State 58

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 59

   26 CompSt: error DefList StmtList . RC

    RC  shift, and go to state 77


State 60

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 22
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    RETURN  shift, and go to state 51
    ID      shift, and go to state 52
    DINT    shift, and go to state 53
    FLOAT   shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 23

    RC  reduce using rule 28 (StmtList)

    CompSt    转到状态 58
    StmtList  转到状态 78
    Stmt      转到状态 60
    Exp       转到状态 61


State 61

   29 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


State 62

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 63

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 90


State 64

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 65

   19 VarDec: VarDec LB DINT RB .

    $default  reduce using rule 19 (VarDec)


State 66

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 67

   41 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 91


State 68

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


State 69

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 40

    VarDec   转到状态 46
    DecList  转到状态 92
    Dec      转到状态 48


State 70

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 93


State 71

   34 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 94


State 72

   31 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 95
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


State 73

   53 Exp: ID LP . Args RP
   54    | ID LP . RP

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 96

    Exp   转到状态 97
    Args  转到状态 98


State 74

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    RELOP  shift, and go to state 81
    AND    shift, and go to state 86
    OR     shift, and go to state 87
    DOT    shift, and go to state 88
    LB     shift, and go to state 89

    $default  reduce using rule 51 (Exp)


State 75

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | NOT Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    $default  reduce using rule 52 (Exp)


State 76

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . RP
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    RP        shift, and go to state 99
    LB        shift, and go to state 89


State 77

   26 CompSt: error DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 78

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 79

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 80

   42 Exp: Exp ASSIGNOP . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 100


State 81

   45 Exp: Exp RELOP . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 101


State 82

   46 Exp: Exp PLUS . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 102


State 83

   47 Exp: Exp MINUS . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 103


State 84

   48 Exp: Exp STAR . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 104


State 85

   49 Exp: Exp DIV . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 105


State 86

   43 Exp: Exp AND . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 106


State 87

   44 Exp: Exp OR . Exp

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 107


State 88

   56 Exp: Exp DOT . ID

    ID  shift, and go to state 108


State 89

   55 Exp: Exp LB . Exp RB

    ID     shift, and go to state 52
    DINT   shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 109


State 90

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 91

   41 Dec: VarDec ASSIGNOP Exp .
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89

    $default  reduce using rule 41 (Dec)


State 92

   39 DecList: Dec COMMA DecList .

    $default  reduce using rule 39 (DecList)


State 93

   32 Stmt: IF LP Exp . RP Stmt
   33     | IF LP Exp . RP Stmt ELSE Stmt
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
